force-app/main/default/objects/Multifamily_New_Construction_Project__c/Multifamily_New_Construction_Project__c.object-meta.xml
<CustomObject>
    <label>Multifamily New Construction Project</label>
    <nameField>
        <label>Multifamily New Construction Project Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Multifamily New Construction Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>