force-app/main/default/objects/Multifamily_New_Construction_Project__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Multifamily New Construction Projects</relationshipLabel>
    <relationshipName>Multifamily_New_Construction_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>