force-app/main/default/objects/Multifamily_New_Construction_Project__c/fields/Applicable_Division__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Division__c</fullName>
    <label>Applicable Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Multi_Family_Divisions</valueSetName>
    </valueSet>
</CustomField>