force-app/main/default/objects/Multifamily_New_Construction_Project__c/fields/Bundling__c.field-meta.xml
<CustomField>
    <fullName>Bundling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bundling</label>
    <type>Checkbox</type>
</CustomField>