force-app/main/default/objects/Multifamily_New_Construction_Project__c/fields/Contract_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Won_Date__c</fullName>
    <label>Contract Won Date</label>
    <type>Date</type>
</CustomField>