force-app/main/default/objects/Multifamily_New_Construction_Project__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Multifamily New Construction Projects</relationshipLabel>
    <relationshipName>Multifamily_New_Construction_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>