force-app/main/default/objects/Multifamily_New_Construction_Project__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Multifamily New Construction Projects</relationshipLabel>
    <relationshipName>Multifamily_New_Construction_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>