force-app/main/default/objects/Multifamily_New_Construction_Project__c/fields/Primary_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product_Family__c</fullName>
    <label>Primary Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appliances</fullName>
            </value>
            <value>
                <fullName>Cabinets</fullName>
            </value>
            <value>
                <fullName>Countertops</fullName>
            </value>
            <value>
                <fullName>Flooring</fullName>
            </value>
            <value>
                <fullName>Lighting</fullName>
            </value>
            <value>
                <fullName>Specialties</fullName>
            </value>
            <value>
                <fullName>Window Treatments</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>