force-app/main/default/objects/Multifamily_New_Construction_Project__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Build to Rent</fullName>
            </value>
            <value>
                <fullName>Podium Wrap</fullName>
            </value>
            <value>
                <fullName>Garden Style</fullName>
            </value>
            <value>
                <fullName>Mid-Rise</fullName>
            </value>
            <value>
                <fullName>Highrise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>