force-app/main/default/objects/Multifamily_New_Construction_Project__c/fields/Service_Areas__c.field-meta.xml
<CustomField>
    <fullName>Service_Areas__c</fullName>
    <label>Service Areas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Greenville, SC</fullName>
            </value>
            <value>
                <fullName>Atlanta, GA</fullName>
            </value>
            <value>
                <fullName>Dallas, TX</fullName>
            </value>
            <value>
                <fullName>Houston, TX</fullName>
            </value>
            <value>
                <fullName>Austin, TX</fullName>
            </value>
            <value>
                <fullName>San Antonio, TX</fullName>
            </value>
            <value>
                <fullName>Corpus Christi, TX</fullName>
            </value>
            <value>
                <fullName>Denver, CO</fullName>
            </value>
            <value>
                <fullName>Phoenix, AZ</fullName>
            </value>
            <value>
                <fullName>Tucson, AZ</fullName>
            </value>
            <value>
                <fullName>Indianapolis, IN</fullName>
            </value>
            <value>
                <fullName>Cleveland, OH</fullName>
            </value>
            <value>
                <fullName>Milwaukee, WI</fullName>
            </value>
            <value>
                <fullName>Madison, WI</fullName>
            </value>
            <value>
                <fullName>San Diego, CA</fullName>
            </value>
            <value>
                <fullName>Portland, OR</fullName>
            </value>
            <value>
                <fullName>Seattle, WA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>