force-app/main/default/objects/Multifamily_New_Construction_Project__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Register Project with Manufacturer</fullName>
                <default>true</default>
                <label>Register Project with Manufacturer</label>
            </value>
            <value>
                <fullName>Prep</fullName>
            </value>
            <value>
                <fullName>Execution</fullName>
            </value>
            <value>
                <fullName>Close Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>